--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "burger",
+  "name": "burger-bar",
   "version": "1.0.0",
-  "description": "MVC",
+  "description": "MVC app with MySql database.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,13 @@
     "url": "https://github.com/kratuvwxyz/burger/issues"
   },
   "homepage": "https://github.com/kratuvwxyz/burger#readme",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
